# serializer version: 1
# name: test_entities[button.logitech_z_5500_center_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.logitech_z_5500_center_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Center down',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Center down',
    'platform': 'logitech_z5500_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'center_down',
    'unique_id': '01JTEST0000000000000000000_center_down',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.logitech_z_5500_center_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Logitech Z-5500 Center down',
    }),
    'context': <ANY>,
    'entity_id': 'button.logitech_z_5500_center_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.logitech_z_5500_center_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.logitech_z_5500_center_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Center up',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Center up',
    'platform': 'logitech_z5500_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'center_up',
    'unique_id': '01JTEST0000000000000000000_center_up',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.logitech_z_5500_center_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Logitech Z-5500 Center up',
    }),
    'context': <ANY>,
    'entity_id': 'button.logitech_z_5500_center_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.logitech_z_5500_coaxial-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.logitech_z_5500_coaxial',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Coaxial',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Coaxial',
    'platform': 'logitech_z5500_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'coax',
    'unique_id': '01JTEST0000000000000000000_coax',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.logitech_z_5500_coaxial-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Logitech Z-5500 Coaxial',
    }),
    'context': <ANY>,
    'entity_id': 'button.logitech_z_5500_coaxial',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.logitech_z_5500_direct-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.logitech_z_5500_direct',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Direct',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Direct',
    'platform': 'logitech_z5500_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'direct',
    'unique_id': '01JTEST0000000000000000000_direct',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.logitech_z_5500_direct-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Logitech Z-5500 Direct',
    }),
    'context': <ANY>,
    'entity_id': 'button.logitech_z_5500_direct',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.logitech_z_5500_effect-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.logitech_z_5500_effect',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Effect',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Effect',
    'platform': 'logitech_z5500_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'effect',
    'unique_id': '01JTEST0000000000000000000_effect',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.logitech_z_5500_effect-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Logitech Z-5500 Effect',
    }),
    'context': <ANY>,
    'entity_id': 'button.logitech_z_5500_effect',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.logitech_z_5500_optical-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.logitech_z_5500_optical',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Optical',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Optical',
    'platform': 'logitech_z5500_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'optical',
    'unique_id': '01JTEST0000000000000000000_optical',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.logitech_z_5500_optical-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Logitech Z-5500 Optical',
    }),
    'context': <ANY>,
    'entity_id': 'button.logitech_z_5500_optical',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.logitech_z_5500_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.logitech_z_5500_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Power',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Power',
    'platform': 'logitech_z5500_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power',
    'unique_id': '01JTEST0000000000000000000_power',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.logitech_z_5500_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Logitech Z-5500 Power',
    }),
    'context': <ANY>,
    'entity_id': 'button.logitech_z_5500_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.logitech_z_5500_settings-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.logitech_z_5500_settings',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Settings',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Settings',
    'platform': 'logitech_z5500_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'setup',
    'unique_id': '01JTEST0000000000000000000_setup',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.logitech_z_5500_settings-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Logitech Z-5500 Settings',
    }),
    'context': <ANY>,
    'entity_id': 'button.logitech_z_5500_settings',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.logitech_z_5500_subwoofer_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.logitech_z_5500_subwoofer_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Subwoofer down',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Subwoofer down',
    'platform': 'logitech_z5500_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'subwoofer_down',
    'unique_id': '01JTEST0000000000000000000_subwoofer_down',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.logitech_z_5500_subwoofer_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Logitech Z-5500 Subwoofer down',
    }),
    'context': <ANY>,
    'entity_id': 'button.logitech_z_5500_subwoofer_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.logitech_z_5500_subwoofer_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.logitech_z_5500_subwoofer_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Subwoofer up',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Subwoofer up',
    'platform': 'logitech_z5500_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'subwoofer_up',
    'unique_id': '01JTEST0000000000000000000_subwoofer_up',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.logitech_z_5500_subwoofer_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Logitech Z-5500 Subwoofer up',
    }),
    'context': <ANY>,
    'entity_id': 'button.logitech_z_5500_subwoofer_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.logitech_z_5500_surround_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.logitech_z_5500_surround_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Surround down',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Surround down',
    'platform': 'logitech_z5500_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'surround_down',
    'unique_id': '01JTEST0000000000000000000_surround_down',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.logitech_z_5500_surround_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Logitech Z-5500 Surround down',
    }),
    'context': <ANY>,
    'entity_id': 'button.logitech_z_5500_surround_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.logitech_z_5500_surround_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.logitech_z_5500_surround_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Surround up',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Surround up',
    'platform': 'logitech_z5500_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'surround_up',
    'unique_id': '01JTEST0000000000000000000_surround_up',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.logitech_z_5500_surround_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Logitech Z-5500 Surround up',
    }),
    'context': <ANY>,
    'entity_id': 'button.logitech_z_5500_surround_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.logitech_z_5500_test-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.logitech_z_5500_test',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Test',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Test',
    'platform': 'logitech_z5500_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'test',
    'unique_id': '01JTEST0000000000000000000_test',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.logitech_z_5500_test-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Logitech Z-5500 Test',
    }),
    'context': <ANY>,
    'entity_id': 'button.logitech_z_5500_test',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
